WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
60190
Can't save a link from "Save Linked File to Download" popup menu
https://bugs.webkit.org/show_bug.cgi?id=60190
Summary
Can't save a link from "Save Linked File to Download" popup menu
Anders Carlsson
Reported
2011-05-04 11:32:03 PDT
Can't save a link from "Save Linked File to Download" popup menu
Attachments
Patch
(14.23 KB, patch)
2011-05-04 11:34 PDT
,
Anders Carlsson
no flags
Details
Formatted Diff
Diff
Patch
(14.37 KB, patch)
2011-05-04 12:29 PDT
,
Anders Carlsson
mitz: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2011-05-04 11:34:19 PDT
Created
attachment 92288
[details]
Patch
Early Warning System Bot
Comment 2
2011-05-04 11:43:45 PDT
Attachment 92288
[details]
did not build on qt: Build output:
http://queues.webkit.org/results/8557610
mitz
Comment 3
2011-05-04 11:45:55 PDT
Comment on
attachment 92288
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=92288&action=review
> Source/WebKit2/WebProcess/WebPage/mac/WebPageMac.mm:639 > + [request.get() setValue:(NSString*)webPage->userAgent() forHTTPHeaderField:@"User-Agent"];
Missing space after NSString
Build Bot
Comment 4
2011-05-04 12:26:53 PDT
Attachment 92288
[details]
did not build on win: Build output:
http://queues.webkit.org/results/8577001
Anders Carlsson
Comment 5
2011-05-04 12:29:30 PDT
Created
attachment 92299
[details]
Patch
Anders Carlsson
Comment 6
2011-05-04 13:33:56 PDT
Committed
r85783
: <
http://trac.webkit.org/changeset/85783
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug