Source/WebKit2/WebProcess/WebPage/qt/WebPageQt.cpp
@@ -27,6 +27,7 @@
 #include "config.h"
 #include "WebPage.h"
 
+#include "NotImplemented.h"
 #include "WebEvent.h"
 #include <WebCore/FocusController.h>
 #include <WebCore/Frame.h>
@@ -265,22 +266,34 @@ bool WebPage::performDefaultBehaviorForKeyEvent(const WebKeyboardEvent& keyboard
     return true;
 }
 
-bool WebPage::platformHasLocalDataForURL(const WebCore::KURL&)
+bool WebPage::platformHasLocalDataForURL(const KURL&)
 {
-    // FIXME: Implement
+    notImplemented();
     return false;
 }
 
-String WebPage::cachedResponseMIMETypeForURL(const WebCore::KURL&)
+String WebPage::cachedResponseMIMETypeForURL(const KURL&)
 {
-    // FIXME: Implement
+    notImplemented();
     return String();
 }
 
-bool WebPage::platformCanHandleRequest(const WebCore::ResourceRequest&)
+bool WebPage::platformCanHandleRequest(const ResourceRequest&)
 {
-    // FIXME: Implement
+    notImplemented();
     return true;
+}
+
+String WebPage::cachedSuggestedFilenameForURL(const KURL&)
+{
+    notImplemented();
+    return String();
+}
+
+PassRefPtr<SharedBuffer> WebPage::cachedResponseDataForURL(const KURL&)
+{
+    notImplemented();
+    return 0;
 }
 
 } // namespace WebKit
